fixed the cart transparency: added z-index

--- a/src/components/overlay/Overlay.module.scss
+++ b/src/components/overlay/Overlay.module.scss
@@ -10,6 +10,7 @@
   visibility: hidden;
   opacity: 0;
   transition: all 0.5s ease-in-out;
+  z-index: 10;
 
     &.show {
         visibility: visible;
